[project]
name = "suptools"
description = "Python utility functions, classes, and other objects for general use across projects"
readme = "README.md"
authors = [{name = "Sup#2.0"}]
license = {file = "LICENSE"}
requires-python = ">= 3.10"
dependencies = []
keywords = ["python", "utility", "tools"]

[project.urls]
Homepage = "https://github.com/Sup2point0/suptools"
Repository = "https://github.com/Sup2point0/suptools"
